--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,11 +19,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activitys.CadastroTarefa"
+        <activity
+            android:name=".Activitys.CadastroTarefa"
             android:label="@string/cadastro_name"
             android:theme="@style/AppTheme.NoActionBar">
             >
         </activity>
+        <activity android:name=".Activitys.DadosTarefa"></activity>
     </application>
 
 </manifest>
