--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         <activity
             android:name=".Activitys.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,11 +23,13 @@
         <activity
             android:name=".Activitys.CadastroTarefa"
             android:label="@string/cadastro_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait">
             >
         </activity>
         <activity android:name=".Activitys.AtualizaDadosTarefa"
-            android:label="Atualização de tarefa">
+            android:label="Atualização de tarefa"
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
